from dev2 branch

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <li>Mollitia, laudantium consequatur?</li>
         <li>Libero, illum itaque.</li>
     </ul>
+    <p>This is from dev2 branch</p>
 </body>
 </html>
